--- a/about.html
+++ b/about.html
@@ -10,5 +10,16 @@
     <h1>About Me</h1>
     <p>This page contains information about me.</p>
 
+    <header class="navbar">
+        <div class="logo">MyPortfolio</div>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
