--- a/index.html
+++ b/index.html
@@ -22,6 +22,32 @@
             </ul>
         </nav>
     </header>
+    <main class="about-container">
+
+    <section class="about-section">
+        <h1>About Me</h1>
+        <p>
+            I am a Computer Science student specializing in Artificial Intelligence
+            and Machine Learning. I enjoy building projects, learning new technologies,
+            and solving real-world problems.
+        </p>
+    </section>
+
+    <section class="skills-section">
+            <h2>My Skills</h2>
+
+            <div class="skills-cards">
+                <div class="skill-card">HTML5</div>
+                <div class="skill-card">CSS3</div>
+                <div class="skill-card">JavaScript</div>
+                <div class="skill-card">Python</div>
+                <div class="skill-card">Machine Learning</div>
+                <div class="skill-card">Git & GitHub</div>
+            </div>
+        </section>
+
+    </main>
+
     <section class="hero">
         <div class="hero-content">
             <h1>Hi, I'm Lakshmi</h1>
@@ -29,7 +55,6 @@
             <a href="projects.html" class="btn">View My Work</a>
         </div>
     </section>
-
 
 </body>
 </html>
