--- a/projects.html
+++ b/projects.html
@@ -76,6 +76,19 @@
         </section>
 
     </main>
+    <section class="gallery-section">
+    <h2>Project Gallery</h2>
+
+    <div class="gallery-grid">
+            <img src="images/project1.jpg" alt="Project image 1">
+            <img src="images/project2.jpg" alt="Project image 2">
+            <img src="images/project3.jpg" alt="Project image 3">
+            <img src="images/project4.jpg" alt="Project image 4">
+            <img src="images/project5.jpg" alt="Project image 5">
+            <img src="images/project6.jpg" alt="Project image 6">
+        </div>
+    </section>
+
 
 </body>
 </html>
