--- a/about.html
+++ b/about.html
@@ -2,13 +2,75 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 
-    <h1>About Me</h1>
-    <p>This page contains information about me.</p>
+    <header class="navbar">
+        <div class="logo"><i class="fas fa-code"></i> MyPortfolio</div>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="about.html"><i class="fas fa-user"></i> About</a></li>
+                <li><a href="projects.html"><i class="fas fa-briefcase"></i> Projects</a></li>
+                <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
+            </ul>
+        </nav>
+        <button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">
+            <i class="fas fa-moon"></i>
+        </button>
+    </header>
 
+    <main class="about-container">
+
+        <!-- ABOUT ME -->
+        <section class="about-section">
+            <h1>About Me</h1>
+            <p>
+                I am a Computer Science Engineering student specializing in
+                Artificial Intelligence and Machine Learning. I have a strong
+                interest in building intelligent systems, analyzing data, and
+                solving real-world problems using technology.
+            </p>
+
+            <p>
+                Through academic coursework and hands-on projects, I have gained
+                practical experience in machine learning, data analysis, and
+                software development. I enjoy continuously learning new tools
+                and improving my technical and problem-solving skills.
+            </p>
+        </section>
+
+        <!-- SKILLS -->
+        <section class="skills-section">
+            <h2>Technical Skills</h2>
+
+            <div class="skills-cards">
+                <div class="skill-card">Python</div>
+                <div class="skill-card">Machine Learning</div>
+                <div class="skill-card">Deep Learning (CNN)</div>
+                <div class="skill-card">Data Analysis (Pandas, NumPy)</div>
+                <div class="skill-card">HTML & CSS</div>
+                <div class="skill-card">Git & GitHub</div>
+            </div>
+        </section>
+
+        <!-- CAREER GOALS -->
+        <section class="about-section">
+            <h2>Career Goals</h2>
+            <p>
+                My goal is to build a strong foundation in Artificial Intelligence
+                and Data Science and work on impactful projects that solve
+                meaningful problems. I am actively seeking opportunities to grow
+                through internships, projects, and collaborative learning.
+            </p>
+        </section>
+
+    </main>
+
+    <script src="theme-toggle.js"></script>
 </body>
 </html>
