--- a/projects.html
+++ b/projects.html
@@ -2,80 +2,88 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 
-    <h1>My Projects</h1>
-    <p>This page showcases my projects.</p>
-
     <header class="navbar">
-        <div class="logo">MyPortfolio</div>
+        <div class="logo"><i class="fas fa-code"></i> MyPortfolio</div>
         <nav>
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="about.html"><i class="fas fa-user"></i> About</a></li>
+                <li><a href="projects.html"><i class="fas fa-briefcase"></i> Projects</a></li>
+                <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
             </ul>
         </nav>
+        <button class="theme-toggle" id="themeToggle" aria-label="Toggle dark mode">
+            <i class="fas fa-moon"></i>
+        </button>
     </header>
 
-    <main class="projects-container">
+<main class="projects-container">
 
-        <h1>My Projects</h1>
+    <h1>My Projects</h1>
 
-        <section class="projects-grid">
+    <section class="projects-grid">
 
-            <div class="project-card">
-                <h3>Image Classification System</h3>
-                <p>
-                    Image classification using CNN feature extraction (MobileNetV2)
-                    and SVM for multi-category prediction.
-                </p>
-                <span class="tech">Python • TensorFlow • SVM</span>
-            </div>
+        <div class="project-card">
+            <h3>Image Classification System</h3>
+            <p>
+                Developed an image classification system using CNN-based
+                feature extraction with MobileNetV2 and Support Vector
+                Machine (SVM) for classification. Implemented preprocessing,
+                feature storage, training, and evaluation modules.
+            </p>
+            <span class="tech">Python • TensorFlow • SVM</span>
+        </div>
 
-            <div class="project-card">
-                <h3>Blockchain File Vault</h3>
-                <p>
-                    Secure file storage system using blockchain principles
-                    to ensure data integrity and tamper resistance.
-                </p>
-                <span class="tech">Blockchain • Python • GUI</span>
-            </div>
+        <div class="project-card">
+            <h3>Blockchain File Vault</h3>
+            <p>
+                Designed a secure file storage system using blockchain concepts
+                to ensure data integrity and tamper resistance. The system
+                includes blockchain integration, file management, and a GUI.
+            </p>
+            <span class="tech">Blockchain • Python • GUI</span>
+        </div>
 
-            <div class="project-card">
-                <h3>Credit Card Fraud Detection</h3>
-                <p>
-                    Machine learning project to detect fraudulent credit card
-                    transactions using data preprocessing and classification.
-                </p>
-                <span class="tech">Python • Pandas • ML</span>
-            </div>
+        <div class="project-card">
+            <h3>Credit Card Fraud Detection</h3>
+            <p>
+                Built a machine learning pipeline to detect fraudulent credit
+                card transactions. Performed data preprocessing, exploratory
+                data analysis, and trained classification models.
+            </p>
+            <span class="tech">Python • Pandas • Machine Learning</span>
+        </div>
 
-            <div class="project-card">
-                <h3>Walmart Data Analysis</h3>
-                <p>
-                    Exploratory data analysis on Walmart sales data using Python
-                    and SQL to identify business insights.
-                </p>
-                <span class="tech">Python • Pandas • MySQL</span>
-            </div>
+        <div class="project-card">
+            <h3>Walmart Sales Data Analysis</h3>
+            <p>
+                Conducted exploratory data analysis on Walmart sales data
+                using Python and SQL to uncover trends, patterns, and
+                business insights.
+            </p>
+            <span class="tech">Python • Pandas • MySQL</span>
+        </div>
 
-            <div class="project-card">
-                <h3>Responsive Portfolio Website</h3>
-                <p>
-                    Fully responsive personal portfolio website built using
-                    HTML, CSS, Flexbox, Grid, and GitHub workflow.
-                </p>
-                <span class="tech">HTML • CSS • GitHub</span>
-            </div>
+        <div class="project-card">
+            <h3>Responsive Portfolio Website</h3>
+            <p>
+                Designed and developed a fully responsive personal portfolio
+                website using HTML, CSS, Flexbox, Grid, and GitHub workflow.
+            </p>
+            <span class="tech">HTML • CSS • GitHub</span>
+        </div>
 
-        </section>
+    </section>
 
-    </main>
+</main>
 
+    <script src="theme-toggle.js"></script>
 </body>
 </html>
