--- a/about.html
+++ b/about.html
@@ -71,6 +71,19 @@
 
     </main>
 
+    <!-- FOOTER -->
+    <footer class="footer">
+        <div class="social-links">
+            <a href="https://github.com/LakshmiNarasimha28" target="_blank" aria-label="GitHub">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/lakshmi-narasimha-561315298/" target="_blank" aria-label="LinkedIn">
+                <i class="fab fa-linkedin"></i>
+            </a>
+        </div>
+        <p>&copy; 2026 Lakshmi Narasimha</p>
+    </footer>
+
     <script src="theme-toggle.js"></script>
 </body>
 </html>
